---
source: web/book/tests/snapshot.rs
expression: "# no-fmt\n\nprql target:sql.postgres\n\nfrom tracks\nfilter (name ~= \"\\\\(I Can't Help\\\\) Falling\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  REGEXP_LIKE(name, '\(I Can''t Help\) Falling')

